feat: add selectors to text-content component

--- a/recipe/src/app/text-content/text-content.component.html
+++ b/recipe/src/app/text-content/text-content.component.html
@@ -1,1 +1,9 @@
-<div class="text-content"></div>
+<div class="text-content">
+  <app-title />
+  <app-preparation />
+  <app-ingredients />
+  <!-- Divider Line -->
+  <app-instructions />
+  <!-- Divider Line -->
+  <app-nutrition />
+</div>
