feat: add styles for top-image

--- a/recipe/src/app/top-image/top-image.component.html
+++ b/recipe/src/app/top-image/top-image.component.html
@@ -1,1 +1,3 @@
-<p>top-image works!</p>
+<div class="top-image mb-lg">
+  <img class="top-image__img" [src]="imageUrl" alt="Image of Omelette" />
+</div>
