--- a/recipe/src/app/title/title.component.html
+++ b/recipe/src/app/title/title.component.html
@@ -1,1 +1,4 @@
-<p>title works!</p>
+<header class="header">
+  <h1 class="header__title mb-sm">{{ title }}</h1>
+  <p class="header__desc">{{ description }}</p>
+</header>
