feat: replace div with article tag for semantic HTML

--- a/recipe/src/app/text-content/text-content.component.html
+++ b/recipe/src/app/text-content/text-content.component.html
@@ -1,4 +1,4 @@
-<div class="text-content">
+<article class="text-content">
   <app-title />
   <app-preparation />
   <app-ingredients />
@@ -6,4 +6,4 @@
   <app-instructions />
   <!-- Divider Line -->
   <app-nutrition />
-</div>
+</article>
