--- a/recipe/src/app/preparation/preparation.component.html
+++ b/recipe/src/app/preparation/preparation.component.html
@@ -1,1 +1,17 @@
-<p>preparation works!</p>
+<div class="preparation">
+  <h3 class="preparation__title mb-xs">{{ title }}</h3>
+  <ul class="preparation__list">
+    <li class="preparation__list__item pl-xs mb-xxxs">
+      <strong class="preparation__list__item__label">Total: </strong>
+      <span class="preparation__list__item__desc">{{ totalTime }}</span>
+    </li>
+    <li class="preparation__list__item pl-xs mb-xxxs">
+      <strong class="preparation__list__item__label">Prepartion: </strong>
+      <span class="preparation__list__item__desc">{{ prepartionTime }}</span>
+    </li>
+    <li class="preparation__list__item pl-xs mb-xxxs">
+      <strong class="preparation__list__item__label">Cooking: </strong>
+      <span class="preparation__list__item__desc">{{ cookingTime }}</span>
+    </li>
+  </ul>
+</div>
