feat: remove margin bottom on last child (item)

--- a/recipe/src/app/preparation/preparation.component.scss
+++ b/recipe/src/app/preparation/preparation.component.scss
@@ -20,6 +20,10 @@
       &__desc {
         color: $color-stone-600;
       }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
