feat: add markup and styles for ingredients component and divider line

--- a/recipe/src/app/text-content/text-content.component.html
+++ b/recipe/src/app/text-content/text-content.component.html
@@ -2,8 +2,10 @@
   <app-title />
   <app-preparation />
   <app-ingredients />
-  <!-- Divider Line -->
+  <hr class="line" />
+
   <app-instructions />
   <!-- Divider Line -->
+
   <app-nutrition />
 </article>
