--- a/recipe/src/app/instructions/instructions.component.html
+++ b/recipe/src/app/instructions/instructions.component.html
@@ -1,1 +1,13 @@
-<p>instructions works!</p>
+<div class="instructions">
+  <h3 class="instructions__title mb-sm">{{ title }}</h3>
+  <ol class="instructions__list">
+    @for (instruction of instructionSteps; track $index) {
+    <li class="instructions__list__item pl-xs mb-xxxs">
+      <strong class="instructions__list__item__label"
+        >{{ step.label }}:
+      </strong>
+      <span class="instructions__list__item__desc">{{ step.time }}</span>
+    </li>
+    }
+  </ol>
+</div>
