feat: add responsive styles for laptop, tablet, and mobile

--- a/recipe/src/app/recipe-card/recipe-card.component.html
+++ b/recipe/src/app/recipe-card/recipe-card.component.html
@@ -1,4 +1,8 @@
-<div class="recipe-card">
-  <app-top-image [imageUrl]="imageUrl" />
-  <app-text-content />
+<div class="recipe-card-container">
+  <div class="recipe-card-container__img">
+    <app-top-image [imageUrl]="imageUrl" />
+  </div>
+  <div class="recipe-card-container__content">
+    <app-text-content />
+  </div>
 </div>
