--- a/recipe/src/app/app.component.scss
+++ b/recipe/src/app/app.component.scss
@@ -5,4 +5,16 @@
   justify-content: center;
   align-items: center;
   margin: 12.8rem 35.2rem;
+
+  @media (max-width: $desktop-width) {
+    margin: 12.8rem 15rem;
+  }
+
+  @media (max-width: $tablet-width) {
+    margin: 8rem 5rem;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin: 0;
+  }
 }
