--- a/recipe/src/app/recipe-card/recipe-card.component.scss
+++ b/recipe/src/app/recipe-card/recipe-card.component.scss
@@ -1,11 +1,26 @@
 @import '../../styles.scss';
 
-.recipe-card {
+.recipe-card-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 4rem;
   background-color: $color-white;
   border-radius: 2.4rem;
   max-width: 73.6rem;
+
+  &__img {
+    padding: 4rem;
+
+    @media (max-width: $mobile-width) {
+      padding: 0;
+    }
+  }
+
+  &__content {
+    padding: 4rem;
+
+    @media (max-width: $mobile-width) {
+      padding: 0 3.2rem 3rem;
+    }
+  }
 }
