--- a/recipe/src/app/top-image/top-image.component.scss
+++ b/recipe/src/app/top-image/top-image.component.scss
@@ -3,5 +3,9 @@
 .top-image {
   &__img {
     border-radius: 1.2rem;
+
+    @media (max-width: $mobile-width) {
+      border-radius: 0;
+    }
   }
 }
