--- a/recipe/src/app/top-image/top-image.component.html
+++ b/recipe/src/app/top-image/top-image.component.html
@@ -1,3 +1,3 @@
-<div class="top-image mb-lg">
+<div class="top-image">
   <img class="top-image__img" [src]="imageUrl" alt="Image of Omelette" />
 </div>
