--- a/recipe/src/app/app.component.scss
+++ b/recipe/src/app/app.component.scss
@@ -4,10 +4,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 12.8rem 35.2rem;
+  margin: 12.5rem 35.2rem;
 
-  @media (max-width: $desktop-width) {
-    margin: 12.8rem 15rem;
+  @media (max-width: $medium-width) {
+    margin: 12.5rem 15rem;
   }
 
   @media (max-width: $tablet-width) {
