--- a/recipe/src/app/nutrition/nutrition.component.html
+++ b/recipe/src/app/nutrition/nutrition.component.html
@@ -1,6 +1,6 @@
 <div class="nutrition">
   <h3 class="nutrition__title mb-xs">{{ title }}</h3>
-  <p class="nutrition__desc mb-xs">{{ desc }}</p>
+  <p class="nutrition__desc mb-xxs">{{ desc }}</p>
   <table class="nutrition__list">
     @for (item of nutritionValues; track $index) {
     <tr class="nutrition__list__item">
