feat: adjust spacing for ingredients and instructions sections

--- a/recipe/src/app/instructions/instructions.component.html
+++ b/recipe/src/app/instructions/instructions.component.html
@@ -2,7 +2,7 @@
   <h3 class="instructions__title mb-sm">{{ title }}</h3>
   <ol class="instructions__list">
     @for (instruction of instructionSteps; track $index) {
-    <li class="instructions__list__item pl-xs mb-xxxs">
+    <li class="instructions__list__item pl-xs mb-xxs">
       <strong class="instructions__list__item__label"
         >{{ instruction.title }}:
       </strong>
