--- a/recipe/src/app/ingredients/ingredients.component.html
+++ b/recipe/src/app/ingredients/ingredients.component.html
@@ -2,7 +2,7 @@
   <h2 class="ingredients__title mb-sm">{{ title }}</h2>
   <ul class="ingredients__list">
     @for (ingredient of ingredientsList; track $index) {
-    <li class="ingredients__list__item pl-xs mb-xxxxs">
+    <li class="ingredients__list__item pl-xs mb-xxxs">
       <span class="ingredients__list__item__desc">{{ ingredient }}</span>
     </li>
     }
