feat: add tbody element to table

--- a/recipe/src/app/nutrition/nutrition.component.html
+++ b/recipe/src/app/nutrition/nutrition.component.html
@@ -2,11 +2,13 @@
   <h3 class="nutrition__title mb-xs">{{ title }}</h3>
   <p class="nutrition__desc mb-xxs">{{ desc }}</p>
   <table class="nutrition__list">
-    @for (item of nutritionValues; track $index) {
-    <tr class="nutrition__list__item">
-      <td class="nutrition__list__item__type">{{ item.type }}</td>
-      <td class="nutrition__list__item__value">{{ item.value }}</td>
-    </tr>
-    }
+    <tbody>
+      @for (item of nutritionValues; track $index) {
+      <tr class="nutrition__list__item">
+        <td class="nutrition__list__item__type">{{ item.type }}</td>
+        <td class="nutrition__list__item__value">{{ item.value }}</td>
+      </tr>
+      }
+    </tbody>
   </table>
 </div>
